--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Welcome to HyperServer15 website!</h1>
-        <h2><a href="phpMyAdmin/">Link to a phpMyAdmin</a></h2>
+        <h2><a href="phpMyAdmin/index.php">Link to a phpMyAdmin</a></h2>
     </body>
 </html>
